--- a/css/base.css
+++ b/css/base.css
@@ -8,7 +8,7 @@
   font-size: 16px;
   --color-text: #111;
   --color-bg: #e3efed;
-  --color-bg-alt: #7851A9;
+  --color-bg-alt: #5f4085;
   --color-link: rgba(0,0,0,0.6);
   --color-link-hover: #000;
   --page-padding: 1.5rem;
